# project-filter-

image_processor/: CMakeLists.txt  bmp.cpp  bmp.h  filter_factory.cpp  filter_factory.h  filters.cpp  filters.h  image.cpp  image.h  image_processor.cpp  parses.cpp  parses.h  readme.md
